Update: replace [", "] to "

--- a/src/main/resources/templates/books/edit.html
+++ b/src/main/resources/templates/books/edit.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<link rel=“stylesheet” type=“text/css” href="../../static/css/style.css" th:href="@{/css/style.css}"/>
+<link rel="stylesheet" type="text/css" href="../../static/css/style.css" th:href="@{/css/style.css}"/>
 <title>書籍編集画面</title>
 </head>
 <body>
